# rawdatautils

./: CMakeLists.txt  requirements.txt
cmake/: rawdatautilsConfig.cmake.in
docs/: README.md
include/rawdatautils/: SSPDecoder.hpp  WIBtoTDE.hpp  WIBtoWIB2.hpp  WIBtoWIBEth.hpp
pybindsrc/: CRTUnpacker.cpp  DAPHNEUnpacker.cc  DAPHNEUnpacker.cpp  TDEUnpacker.cpp  TOADUnpacker.cpp  TOADUnpacker2.cpp  WIB2Unpacker.cc  WIB2Unpacker.cpp  WIBEthUnpacker.cpp  WIBUnpacker.cc  WIBUnpacker.cpp  file_conversion.cpp  module.cpp  sspdecoder.cpp  unpack.cpp  wib.cpp
python/rawdatautils/: __init__.py  rawdataunpacker.py
python/rawdatautils/analysis/: __init__.py  dataframe_creator.py
python/rawdatautils/analysis/dqm/: dqmplots.py  dqmtests.py  dqmtools.py
python/rawdatautils/analysis/wib2/: __init__.py
python/rawdatautils/file_conversion/: __init__.py
python/rawdatautils/unpack/: __init__.py  dataclasses.py  utils.py
python/rawdatautils/unpack/crt/: __init__.py
python/rawdatautils/unpack/daphne/: __init__.py
python/rawdatautils/unpack/tde/: __init__.py
python/rawdatautils/unpack/toad/: __init__.py
python/rawdatautils/unpack/wib/: __init__.py
python/rawdatautils/unpack/wib2/: __init__.py
python/rawdatautils/unpack/wibeth/: __init__.py
python/rawdatautils/utilities/wib2/: __init__.py
python/rawdatautils/utilities/wibeth/: __init__.py
scripts/: createMetadataFilesForDataN.sh  crt_decoder.py  daphne_decoder.py  dqm_analyzer.py  file_quality_checker.py  hdf5_wib2_to_binary.py  hdf5_wibeth_to_binary.py  print_attributes_for_json_metadata.py  print_trnumbers_for_json_metadata.py  print_values_for_json_metadata.py  tdedecoder.py  toad-decoder.py  toad_decoder.py  toad_decodertoroot.py  toad_decodertorootnew.py  toadchannelmaptest.txt  tpdecoder.py  wib2decoder.py  wib_binary_file_converter.py  wibdecoder.py  wibethdecoder.py
src/: SSPDecoder.cpp
test/scripts/: daphne_inspector.py  test_unpacker.py  wib2decoder.py  wibdecoder.py  wibdecoder_BasicStats.py  wibdecoder_TimeTest.py
unittest/: WIBtoWIB2_test.cxx
